css/main.css
html {
  box-sizing: border-box;
  line-height: 1.5;
  font-family: "Roboto", sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

.banner {
  position: relative;
  max-height: 500px;
  overflow: hidden;
}

.img-flex {
  display: block;
  width: 100%;
}

.banner-content {
  display: flex;
  position: absolute;
  max-width: 45em;
  width: 100%;
  top: 7rem;
  left: 50%;
  transform: translateX(-50%);
  justify-content: center;
  font-size: 1.5rem;
}

.logo {
  margin: 1.5rem;
}

h2 {
  font-family: "Roboto Condensed", sans-serif;
  font-size: 3rem;
  margin: 0;
}

div p {
  margin: 0 0 1rem;
}

.btn {
  background-color: #333;
  padding: 1rem 1.25rem;
  border-radius: 4px;
}

.btn-big {
  text-decoration: none;
  color: #fff;
  margin: 1rem 0;
}

.btn:hover {
  background-color: #000;
}

